# milkshake-terminal

./: .gitignore  Cargo.toml  settings.gradle
.github/actions/: build-android.yml
.github/workflows/: build-android-fontconfig.yml  build-android.yml  ci.yml
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/org/milkshake/terminal/: MainActivity.java
crates/milkshake-terminal/: Cargo.toml
crates/milkshake-terminal/src/: main.rs  terminal.rs
crates/milkshake-terminal/src/terminal/: buffer.rs  grid.rs  handler.rs  state.rs
crates/milkshake-vte/: Cargo.toml
crates/milkshake-vte/src/: args.rs  lib.rs  performer.rs
src/: config.rs  convert.rs  font.rs  lib.rs  main.rs  pseudo_terminal.rs  shell.rs  terminal.rs  vte.rs
