[package]
name = "milkshake-terminal"
version = "0.0.0"
edition = "2021"

[dependencies]
bevy = { version = "0.15.0-rc.1", default-features = false, features = ["bevy_text", "bevy_ui", "multi_threaded", "tonemapping_luts", "wayland"] }
compact_str = { version = "0.8.0", default-features = false }
crossbeam-channel = { version = "0.5.13", default-features = false }
deranged = { version = "0.3.11", default-features = false }
derive_more = { version = "1.0.0", default-features = false, features = ["add", "add_assign", "display", "from", "from_str", "mul", "mul_assign", "not", "sum"] }
libc = { version = "0.2.161", default-features = false }
rustix = { version = "0.38.37", default-features = false, features = ["libc", "process", "std"] }
rustix-openpty = { version = "0.1.1", default-features = false }
unicode-segmentation = { version = "1.12.0", default-features = false }
vte = { version = "0.13.0", default-features = false }

[profile.dev]
opt-level = 2

[profile.dev.package."*"]
opt-level = 3
